2015-03-06  Wilco Dijkstra  <wilco.dijkstra@arm.com>

	* tree-ssa-phiopt.c (neg_replacement): Remove.
	(tree_ssa_phiopt_worker): Remove negate optimization.

2015-03-05  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65302
	* value-prof.c (gimple_ic): Pure dead eh edges when needed.

2015-03-06  Richard Biener  <rguenther@suse.de>

	PR middle-end/64928
	* tree-ssa-live.h (struct tree_live_info_d): Add livein_obstack
	and liveout_obstack members.
	(calculate_live_on_exit): Remove.
	(calculate_live_ranges): Change declaration.
	* tree-ssa-live.c (liveness_bitmap_obstack): Remove global var.
	(new_tree_live_info): Adjust.
	(calculate_live_ranges): Delete livein when not wanted.
	(calculate_live_ranges): Do not initialize liveness_bitmap_obstack.
	Deal with partly deleted live info.
	(loe_visit_block): Remove temporary bitmap by using
	bitmap_ior_and_compl_into.
	(live_worklist): Adjust accordingly.
	(calculate_live_on_exit): Make static.
	* tree-ssa-coalesce.c (coalesce_ssa_name): Tell calculate_live_ranges
	we do not need livein.

2015-03-06  Jonathan Wakely  <jwakely@redhat.com>

	* real.c (real_from_string): Fix typo in assertion.

2015-03-06  Alex Velenko  <alex.velenko@arm.com>

	* ChangeLog (2015-03-05): Reflect Richard Henderson as actual author of
	the patch.

2015-03-05  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-icf.c (sem_variable::equals_wpa): Check FINAL flags.

2015-03-05  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/64342
	* lra-assigns.c (find_hard_regno_for): Rename to
	find_hard_regno_for_1.  Add a new parameter.
	(find_hard_regno_for): New function using find_hard_regno_for_1.

2015-03-05  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR rtl-optimization/65067
	* expmed.c (store_bit_field, extract_bit_field): Reworked the
	strict volatile bitfield handling.

2015-03-05  Martin Liska  <mliska@suse.cz>

	PR ipa/65318
	* ipa-icf.c (sem_variable::equals): Compare variables types.

2015-03-05  Richard Henderson  <rth@redhat.com>
